<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/preferences"
        android:title="@string/preferences"
        app:showAsAction="never"/>

    <item android:id="@+id/login"
    android:title="@string/login"
    app:showAsAction="never"/>

    <item android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never"/>

    <item android:id="@+id/register"
        android:title="@string/register"
        app:showAsAction="never"/>

    <item android:id="@+id/check_login"
        android:title="Check login"
        app:showAsAction="never"/>

    <item android:id="@+id/new_topic"
        android:title="@string/new_topic"
        app:showAsAction="never"/>

    <item android:id="@+id/new_post"
        android:title="@string/new_post"
        app:showAsAction="never"/>

</menu>