<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/apiSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:text="@string/api_settings"/>

    <TextView
        android:id="@+id/forumUrlTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/apiSettings"
        android:text="@string/forum_url"/>

    <EditText
        android:id="@+id/apiUrlEditTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_alignBaseline="@+id/forumUrlTextView"
        android:layout_alignBottom="@+id/forumUrlTextView"
        android:layout_toRightOf="@+id/forumUrlTextView"
        android:layout_toEndOf="@+id/forumUrlTextView" />

    <TextView
        android:id="@+id/displaySettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/display_settings"
        android:layout_below="@+id/apiUrlEditTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp" />

    <TextView
        android:id="@+id/postsPerPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/displaySettings"
        android:text="@string/posts_per_page"/>

    <TextView
        android:id="@+id/topicsPerPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/postsPerPage"
        android:text="@string/topics_per_page"/>

    <Spinner
        android:id="@+id/posts_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_alignTop="@+id/postsPerPage"
        android:layout_alignLeft="@+id/displaySettings"
        android:layout_alignStart="@+id/displaySettings" />

    <Spinner
        android:id="@+id/topics_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/topicsPerPage"
        android:layout_alignLeft="@+id/posts_spinner"
        android:layout_alignStart="@+id/posts_spinner" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:layout_marginTop="28dp"
        android:id="@+id/save_button"
        android:layout_below="@+id/topics_spinner"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
</ScrollView>